[tool.poetry]
name = "hexlet-code"
version = "1.0"
description = "config compare util"
authors = ["Domo_spb"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"